--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Site Title</title>
   </head>
   <body>
-    My personal site!
+    <p style="color: blue;">My personal site!</p>
   </body>
 </html>
