Update body content

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Site Title</title>
   </head>
   <body>
-    <p style="color: blue;">My personal site!!!</p>
+    <p style="color: blue;">My very personal site!!!</p>
   </body>
 </html>
