--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 
   <head>
     <title>Site Title</title>
+    <style>
+      p {
+        color: blue;
+      }
+    </style>
   </head>
 
   <body>
-    <p style="color: blue;">My very personal site!!!</p>
+    <p>My very personal site!!!</p>
   </body>
 
 </html>
